Fixes about page on mobile

--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -14,5 +14,6 @@
 
   ul.no-bullets li {
     list-style: none;
+    padding-right: 10px;
   }
 }
